# WFOMC

./: .gitignore  README.md  pyproject.toml  reference.bib  setup.py  tmp.pkl  tmp.wfomcs
.serena/: project.yml
check/: 0mod2-regular-graph-sc2.csv  0mod2-regular-graph-sc2_1.cnf  0mod2-regular-graph-sc2_2.cnf  0mod2-regular-graph-sc2_3.cnf  0mod2-regular-graph-sc2_4.cnf  0mod2-regular-graph-sc2_5.cnf  0mod2-regular-graph-sc2_6.cnf  count_from_cnf.py  fo2cnf.py
counting_fo2/: problems.py  wfomc.py
experiment/: wfomc_algorithm_comparison.py
models/: 0mod2-regular-graph-sc2.wfomcs  0mod2-regular-graph.wfomcs  1mod2-regular-graph.wfomcs  2-colored-graph.wfomcs  2-regular-directed-graph.wfomcs  2-regular-graph-sc2.wfomcs  2-regular-graph.cnf  2-regular-graph.wfomcs  2mod4-regular-graph-sc2.wfomcs  3-colored-graph.wfomcs  3-regular-2-colored-graph.wfomcs  3-regular-3-colored-graph.wfomcs  3-regular-directed-graph.wfomcs  3-regular-graph-3-colored.wfomcs  3-regular-graph-4-colored.wfomcs  3-regular-graph-sc2.wfomcs  4-colored-graph.wfomcs  4-regular-graph-2-colored.wfomcs  4-regular-graph-4-colored.wfomcs  5-regular-graph-2-colored.wfomcs  5-regular-graph.wfomcs  BA.wfomcs  BA_CC.wfomcs  cardinality_constraints_example.wfomcs  deskmate.mln  employment.mln  existential.wfomcs  friends-smokes.wfomcs  function-no-fix-sc2.wfomcs  m-odd-degree-graph-cc.wfomcs  m-odd-degree-graph-sc2.wfomcs  max2-regular-graph.wfomc  mod_unary.wfomcs  nonisolated_graph.wfomcs  permutation-no-fix-sc2.wfomcs  permutation-no-fix.wfomcs  permutation.wfomcs  test_mod_and_k_expamle.wfomcs
(+310 files in other folders)
